<resources>
    <string name="nukera_docs">https://github.com/hufrea/byedpi/blob/main/README.md</string>
    <string name="app_name">Nukera</string>
    <string name="cmd_documentation">Документация Nukera</string>
    <string name="toggle_connect">Вкл/Выкл</string>
    <string name="vpn_connect">Подключить</string>
    <string name="vpn_disconnect">Отключить</string>
    <string name="vpn_connected">Подключено</string>
    <string name="vpn_disconnected">Отключено</string>
    <string name="proxy_up">Подключено</string>
    <string name="proxy_down">Отключено</string>
    <string name="proxy_start">Старт</string>
    <string name="proxy_stop">Стоп</string>
    <string name="service_start_btn">Старт</string>
    <string name="service_pause_btn">Пауза</string>
    <string name="service_stop_btn">Стоп</string>
    <string name="service_paused_text">Приостановлен</string>
    <string name="open_editor">Редактор</string>
    <string name="settings">Настройки</string>
    <string name="vpn_permission_denied">Нет разрешения на активацию VPN</string>
    <string name="service_restart">Сервис перезапущен с новыми параметрами</string>
    <string name="settings_unavailable">Сначала отключитесь, чтобы зайти в настройки</string>
    <string name="title_settings">Настройки</string>
    <string name="save_logs">Сохранить логи</string>
    <string name="close_app">Остановить</string>
    <string name="reset_settings">Сбросить настройки</string>
    <string name="export_settings">Экспорт настроек</string>
    <string name="import_settings">Импорт настроек</string>
    <string name="backup_settings">Основные настройки</string>
    <string name="backup_command_history">Список стратегий</string>
    <string name="backup_selected_apps">Выбранные приложения</string>
    <string name="backup_domain_lists">Списки доменов</string>
    <string name="export_failed">Не удалось экспортировать настройки</string>
    <string name="import_failed">Не удалось импортировать настройки</string>
    <string name="logs_failed">Не удалось собрать логи</string>
    <string name="proxy_address">%1$s:%2$s</string>
    <string name="lang_settings">Язык</string>
    <string name="theme_settings">Тема</string>
    <string name="mode_setting">Режим</string>
    <string name="dbs_ip_setting">DNS</string>
    <string name="nukera_version">Nukera</string>
    <string name="nukera_proxy_ip_setting">Прослушиваемый IP</string>
    <string name="nukera_proxy_port_setting">Порт</string>
    <string name="nukera_max_connections_setting">Максимальное к-во подключений</string>
    <string name="nukera_buffer_size_setting">Размер буфера</string>
    <string name="nukera_default_ttl_setting">TTL по умолчанию</string>
    <string name="nukera_no_domain_setting">Без домена</string>
    <string name="nukera_desync_method_setting">Метод десинхронизации</string>
    <string name="nukera_split_position_setting">Позиция разделения</string>
    <string name="nukera_split_at_host_setting">Разделить в хосте</string>
    <string name="nukera_fake_ttl_setting">TTL поддельных пакетов</string>
    <string name="nukera_host_mixed_case_setting">Смешанный регистр хоста</string>
    <string name="nukera_domain_mixed_case_setting">Смешанный регистр домена</string>
    <string name="nukera_host_remove_spaces_setting">Удалить пробелы из хоста</string>
    <string name="nukera_tlsrec_enabled_setting">Разделить TLS запись</string>
    <string name="nukera_tlsrec_position_setting">Позиция разделения TLS записи</string>
    <string name="nukera_tlsrec_at_sni_setting">Разделить TLS запись в SNI</string>
    <string name="version">Nukera</string>
    <string name="source_code_link">Исходный код</string>
    <string name="nukera_readme_link">Что все это значит?</string>
    <string name="failed_to_start">Не удалось запустить %1$s</string>
    <string name="vpn_channel_name">VPN</string>
    <string name="proxy_channel_name">Прокси</string>
    <string name="notification_title">Nukera</string>
    <string name="vpn_notification_content">VPN работает</string>
    <string name="proxy_notification_content">Прокси работает</string>
    <string name="general_category">Общие</string>
    <string name="nukera_category">Nukera</string>
    <string name="about_category">О программе</string>
    <string name="command_line_editor">Редактор командной строки</string>
    <string name="ui_editor">Стандартный редактор</string>
    <string name="use_command_line_settings">Использовать командную строку</string>
    <string name="desync_http">Десинхронизация HTTP</string>
    <string name="desync_https">Десинхронизация HTTPS</string>
    <string name="desync_udp">Десинхронизация UDP</string>
    <string name="oob_data">OOB Данные</string>
    <string name="sni_of_fake_packet">SNI поддельного пакета</string>
    <string name="nukera_proxy">Прокси</string>
    <string name="nukera_desync">Десинхронизация</string>
    <string name="command_line_arguments">Аргументы командной строки</string>
    <string name="nukera_hosts_mode_setting">Хосты</string>
    <string name="nukera_hosts_blacklist_setting">Черный список хостов</string>
    <string name="nukera_hosts_whitelist_setting">Белый список хостов</string>
    <string name="nukera_tcp_fast_open_setting">TCP Fast Open</string>
    <string name="nukera_udp_fake_count">Количество поддельных UDP</string>
    <string name="ipv6_setting">IPv6</string>
    <string name="nukera_fake_offset_setting">Смещение поддельных пакетов</string>
    <string name="nukera_drop_sack_setting">Отбрасывать SACK</string>
    <string name="desync_udp_category">UDP</string>
    <string name="desync_http_category">HTTP</string>
    <string name="desync_https_category">HTTPS</string>
    <string name="nukera_protocols_category">Протоколы</string>
    <string name="nukera_protocols_hint">Снимите все галочки, чтобы десинхронизировать весь трафик</string>
    <string name="automation">Автоматизация</string>
    <string name="autostart_settings">Автозапуск приложения при включении устройства</string>
    <string name="autohide_settings">Автоматически скрывать приложение после автозапуска</string>
    <string name="autoconnect_settings">Автоматическое подключение при открытии Nukera</string>
    <string name="applist_setting">Фильтр приложений</string>
    <string name="apps_select">Выбрать приложения</string>
    <string name="search_apps">Поиск приложений</string>
    <string name="storage_access">Доступ к файлам</string>
    <string name="storage_access_summary">Предоставьте доступ к хранилищу, если вы хотите использовать файлы в стратегиях</string>
    <string name="storage_access_allowed_summary">Разрешен</string>
    <string name="cmd_args_clear">Очистить</string>
    <string name="cmd_args_paste">Вставить</string>
    <string name="cmd_history_title">Список стратегий</string>
    <string name="cmd_history_title_summary">Нажмите для управления историей</string>
    <string name="cmd_history_delete_all">Очистить историю</string>
    <string name="cmd_history_delete_unpinned">Удалить незакрепленные</string>
    <string name="cmd_history_menu">Выберите действие</string>
    <string name="cmd_history_apply">Применить</string>
    <string name="cmd_history_copy">Копировать</string>
    <string name="cmd_history_rename">Переименовать</string>
    <string name="cmd_history_edit">Редактировать</string>
    <string name="cmd_history_pin">Закрепить</string>
    <string name="cmd_history_unpin">Открепить</string>
    <string name="cmd_history_pinned">Закреплено</string>
    <string name="cmd_history_applied">Применена</string>
    <string name="cmd_history_delete">Удалить</string>
    <string name="telegram_link">Группа Telegram</string>
    <string name="title_test">Подбор стратегий</string>
    <string name="summary_test">Тестирование работы подготовленных аргументов командной строки</string>
    <string name="test_start">Начать проверку</string>
    <string name="test_stop">Остановить проверку</string>
    <string name="test_disclaimer">
        Данный раздел предоставляет возможность протестировать работу приложения с помощью набора заранее подготовленных команд.
        \nВ процессе тестирования система проверяет доступность различных сайтов через прокси, и вы можете наблюдать за ходом выполнения в режиме реального времени.
        \n
        \nОбратите внимание, что функционал данного тестирования находится на этапе разработки, и набор команд пока что ограничен.
        \nРезультаты тестов могут быть полезны для предварительной оценки работы прокси, однако их успешное прохождение не гарантирует безупречную работу в реальных условиях.
    </string>
    <string name="test_crash">
        Приложение вылетело во время тестирования?
        \n\nПерейдите в настройки теста и увеличивайте время ожидания между проверками шагом в 2 секунды (2, 4, 6..).
    </string>
    <string name="test_process">Проверка %1$d/%2$d</string>
    <string name="test_proxy_error">Ошибка прокси. Тест остановлен</string>
    <string name="test_good_cmds">Стратегии с наилучшим результатом, применяйте от большего к меньшему</string>
    <string name="test_complete">Проверка завершена</string>
    <string name="test_complete_info">Нажмите на стратегию, чтобы скопировать ее или применить</string>
    <string name="test_cmd_connect">Применить и запустить</string>
    <string name="test_cmd_apply">Применить без запуска</string>
    <string name="test_cmd_connected">Подключено</string>
    <string name="test_log_copy">Скопировать лог</string>
    <string name="test_auto_combine">Автокомбинация</string>
    <string name="test_auto_combine_result">Автокомбинация создана</string>
    <string name="test_dead_filtered">Удалено мёртвых стратегий: %1$d</string>
    <string name="optimize">Оптимизация</string>
    <string name="test_download">Тест загрузки TG</string>
    <string name="optimize_progress">Тест %1$d/%2$d</string>
    <string name="optimize_complete">Оптимизация завершена</string>
    <string name="testing_download">Тест загрузки…</string>
    <string name="stop_before_settings">Остановите перед настройками</string>
    <string name="toast_copied">Скопировано</string>
    <string name="test_settings_sni">SNI фейк пакетов</string>
    <string name="test_settings_fulllog">Вывод ответа хостов</string>
    <string name="test_settings_logclickable">Все стратегии кликабельны</string>
    <string name="test_settings_domain_lists">Списки доменов для проверки</string>
    <string name="test_settings_domain_empty">Нет доменов для проверки</string>
    <string name="test_settings_domains">Свой список доменов</string>
    <string name="test_settings_usercommands">Свой список стратегий</string>
    <string name="test_settings_commands">Список стратегий</string>
    <string name="test_delay">Ожидание между проверками</string>
    <string name="test_requests">Количество запросов к домену</string>
    <string name="test_requests_limit">Максимум параллельных запросов</string>
    <string name="test_timeout">Таймаут ответа домена</string>
    <string name="test_show_details">Показать детали</string>
    <string name="test_hide_details">Скрыть детали</string>
    <string name="test_expand">Развернуть</string>
    <string name="battery_optimization">Оптимизация батареи</string>
    <string name="battery_optimization_summary">Отключите для улучшения стабильности</string>
    <string name="battery_optimization_disabled_summary">Отключена</string>
    <string name="permission_category">Разрешения</string>
    <string name="documentation_link">Инструкция</string>
    <string name="proxytest_delay_desc">Увеличение значения повышает стабильность</string>
    <string name="proxytest_requests_desc">Увеличение значения повышает точность, но может снизить стабильность</string>
    <string name="current_strategy">Текущая стратегия</string>
    <string name="setup_telegram">Настроить Telegram</string>
</resources>