<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/nukera_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="12dp">

            <Button
                android:id="@+id/startStopButton"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingLeft="10pt"
                android:paddingRight="10pt"
                android:textAllCaps="true"
                android:text="@string/test_start" />

            <Button
                android:id="@+id/autoCombineButton"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingLeft="10pt"
                android:paddingRight="10pt"
                android:textAllCaps="true"
                android:text="@string/test_auto_combine"
                android:visibility="gone" />

            <TextView
                android:id="@+id/progressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingTop="6dp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/strategiesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingTop="0dp"
            android:paddingBottom="4dp" />

        <TextView
            android:id="@+id/disclaimerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/test_disclaimer"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>
